feat: refatora a estrutura do Funcionario com uso de Request/Response e ajusta lógica no Controller